--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Keeper App</title>
-    <link font-family: "Montserrat", sans-serif;
-    href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
-    rel="stylesheet" />
+    <title>Calculator</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
